Fix bug in navbar overlapping content

--- a/styling.css
+++ b/styling.css
@@ -53,12 +53,20 @@
   padding: 15px;
 }
 
+.sticky + .heading{
+  padding-top: 60px;
+}
+
 .topic {
   font-size: 4rem;
   letter-spacing: 2px;
   color: #333;
   padding: 15px;
   text-align: center;
+}
+
+.sticky + .topic{
+  padding-top: 60px;
 }
 
 .intro{
